syntax = "proto3";

package core.messages;

import "common.proto";

message EventsMessage {
  repeated EventMessage events = 1;
}

message AcknowledgeEventMessage {
  AggregateGid gid = 1;
  uint64 time = 2;
}

message AcknowledgeEventsMessage {
  repeated AcknowledgeEventMessage events = 1;
}

message ClientSocketMessage {
  oneof message {
    EventsMessage events = 1;
  }
}

message ServerSocketMessage {
  oneof message {
    EventsMessage events = 1;
    AcknowledgeEventMessage acknowledge = 2;
  }
}
